--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,3 @@
-<footer class="footer">我是 footer</footer>
+<footer>
+    <p class="fs-14 fs-md-16 my-24 my-md-32 text-center">© 7TAO七逃. All Rights Reserved</p>
+</footer>
