--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,45 @@
-<h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+<div class="container px-12 px-md-72">
+    <ul
+        class="d-flex justify-content-between  align-items-stretch list-unstyled py-24 border-bottom border-primary border-3">
+        <li class="d-flex align-items-center">
+            <!-- <div
+                class="logo-icon me-16 d-flex justify-content-center align-items-center bg-secondary border border-primary border-2">
+                <img src="../assets/images/logo.png" alt="#">
+                width="28.27" height="28.27"
+            </div> -->
+            <img class="logo me-25 me-md-16 " src="../assets/images/logo.png" alt="#">
+            <h1 class="d-none d-md-block mb-0 me-4 fs-32">7TAO</h1>
+            <h2 class="d-none d-md-block mb-0 me-48 fs-16 fw-bold">活動訂票網</h2>
+
+            <div class="d-flex align-items-center position-relative">
+                <input class="form-control form-change py-6 py-md-14 ps-12 ps-lg-44 " type="text" placeholder="探索活動">
+                <a class="d-flex justify-content-between align-items-center bg-primary p-12 p-md-16 position-absolute end-0 search-area"
+                    href="#">
+                    <i class="icofont-search-1 text-secondary search-icon"></i>
+                </a>
+            </div>
+
+        </li>
+
+        <li class="d-none d-lg-flex">
+            <div class="d-flex align-items-center resgister"><i class="icofont-ui-file fs-18"></i>
+                <a href="#">
+                    <h3 class="fs-18 mb-0 ms-4 ">REGISTER</h3>
+                </a>
+            </div>
+            <div class="d-flex align-items-center ms-24 login"><i class="icofont-ui-user fs-18"></i>
+                <a href="#">
+                    <h3 class="fs-18 mb-0 ms-4 ">LOGIN</h3>
+                </a>
+            </div>
+        </li>
+        
+        <li class="d-flex align-items-center justify-content-center d-lg-none ms-24 border border-1 border-primary rounded py-4 px-12">
+            <span class="material-symbols-outlined menu-icon text-center">
+                Menu
+            </span>
+        </li>
+
+    </ul>
+</div>
