--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -6,14 +6,14 @@
 @import "../../node_modules/bootstrap/scss/functions";
 @import './utils/variables';
 @import './utils/utilities';
-@import './utils/base';
+
 
 @import "../../node_modules/bootstrap";
 
 
-@import './layout/header.scss';
-@import './layout/footer.scss';
+@import './layout/header';
+@import './layout/footer';
 
-
-@import './pages/index.scss';
-
+@import './base/base';
+@import './pages/index';
+@import './pages/login';
