--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,3 +1,3 @@
-<footer>
+<footer class="border-top border-3 border-primary">
     <p class="fs-14 fs-md-16 my-24 my-md-32 text-center">© 7TAO七逃. All Rights Reserved</p>
 </footer>
