--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -15,9 +15,9 @@
                 <div class="d-flex align-items-center position-relative">
                     <input class="form-control form-change py-6 py-md-14 ps-12 ps-lg-44 " type="text"
                         placeholder="探索活動">
-                    <a class="d-flex justify-content-between align-items-center bg-primary p-12 p-md-16 position-absolute end-0 search-area"
+                    <a class="d-flex justify-content-between align-items-center bg-primary px-12 px-md-16 position-absolute top-0 end-0 search-area"
                         href="#">
-                        <i class="icofont-search-1 text-secondary search-icon"></i>
+                        <i class="d-flex justify-content-between align-items-center icofont-search-1 text-secondary search-icon"></i>
                     </a>
                 </div>
 
